--- a/index.html
+++ b/index.html
@@ -150,16 +150,76 @@
                   </label>
                   <label for=""
                     ><p>Время:</p>
-                    <input
-                      type="time"
-                      placeholder="Телефон: "/>
+                    <input type="time" placeholder="Телефон: " />
                   </label>
-                  <input type="text" placeholder="Ваше имя:"/>
-                  <input type="phone" placeholder="Телефон: "/>
+                  <input type="text" placeholder="Ваше имя:" />
+                  <input type="phone" placeholder="Телефон: " />
                 </div>
               </form>
               <button class="btn" id="sendMain">Оставить заявку</button>
               <button class="btn" id="openMain">Оставить заявку</button>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section>
+        <div class="container">
+          <h1 class="title">Как мы работаем</h1>
+          <div class="work">
+            <div class="work__item">
+              <div class="number"><span>1</span></div>
+              <div class="work__content">
+                <img src="./img/incoming.svg" alt="" />
+                <p>Ваш звонок / заявка с сайта</p>
+              </div>
+            </div>
+            <div class="work__item">
+              <div class="number"><span>2</span></div>
+              <div class="work__content">
+                <img src="./img/userCheck.svg" alt="" />
+                <p>Запись на время, определяем объем работ</p>
+              </div>
+            </div>
+            <div class="work__item">
+              <div class="number"><span>3</span></div>
+              <div class="work__content">
+                <img src="./img/clock.svg" alt="" />
+                <p>
+                  В назначенное время, специалист встретит Вас и примет машину в
+                  работу
+                </p>
+              </div>
+            </div>
+            <div class="work__item">
+              <div class="number"><span>4</span></div>
+              <div class="work__content">
+                <img src="./img/coffee.svg" alt="" />
+                <p>
+                  Пока мы заботимся о вашем автомобиле, вы можете
+                  воспользоваться услугами в нашей зоне ожидания
+                </p>
+              </div>
+            </div>
+            <div class="work__item">
+              <div class="number"><span>5</span></div>
+              <div class="work__content">
+                <img src="./img/smile.svg" alt="" />
+                <p>Шиномонтаж, наши мастера качественно выполняют свою работу</p>
+              </div>
+            </div>
+            <div class="work__item">
+              <div class="number"><span>6</span></div>
+              <div class="work__content">
+                <img src="./img/dollarSign.svg" alt="" />
+                <p>Оплата наличными или картой по факту выполнения работ</p>
+              </div>
+            </div>
+            <div class="work__item">
+              <div class="number"><span>7</span></div>
+              <div class="work__content">
+                <img src="./img/gift.svg" alt="" />
+                <p>Дарим фирменные пакеты для шин и дисков</p>
+              </div>
             </div>
           </div>
         </div>
