--- a/index.html
+++ b/index.html
@@ -204,7 +204,9 @@
               <div class="number"><span>5</span></div>
               <div class="work__content">
                 <img src="./img/smile.svg" alt="" />
-                <p>Шиномонтаж, наши мастера качественно выполняют свою работу</p>
+                <p>
+                  Шиномонтаж, наши мастера качественно выполняют свою работу
+                </p>
               </div>
             </div>
             <div class="work__item">
@@ -219,6 +221,36 @@
               <div class="work__content">
                 <img src="./img/gift.svg" alt="" />
                 <p>Дарим фирменные пакеты для шин и дисков</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section>
+        <div class="container">
+          <div class="calendar">
+            <h1 class="title">Запишитесь на сервис</h1>
+            <p>Оставьте телефон, имя и желаемую дату визита</p>
+            
+            <div class="calendar__flex">
+              <div class="calendar_date">
+                <div class="month">
+                  <button class="prev-btn"><img src="./img/prew.svg" alt=""></button>
+                    <div class="date">
+                      <h2>Сентябрь</h2>
+                    </div>
+                    <button class="next-btn"><img src="./img/newt.svg" alt=""></button>
+                </div>
+                <div class="weekdays">
+                  <div>вс</div>
+                  <div>пн</div>
+                  <div>вт</div>
+                  <div>ср</div>
+                  <div>чт</div>
+                  <div>пт</div>
+                  <div>сб</div>
+                </div>
+                <div class="days"></div>
               </div>
             </div>
           </div>
