bg-section map api

--- a/index.html
+++ b/index.html
@@ -51,7 +51,9 @@
               <button class="btn" id="firstPopup">
                 Получите бесплатную консультацию
               </button>
-              <button class="btn btn-white" id="secondPopup">Запишитесь на сервис</button>
+              <button class="btn btn-white" id="secondPopup">
+                Запишитесь на сервис
+              </button>
             </div>
           </div>
         </div>
@@ -164,7 +166,7 @@
           </div>
         </div>
       </section>
-      <section>
+      <section class="bg-section">
         <div class="container">
           <h1 class="title">Как мы работаем</h1>
           <div class="work" id="work">
@@ -428,13 +430,55 @@
               <div class="select__wheels">
                 <label>Размер шин</label>
                 <select name="" id="">
+                  <option value="7.5">7.5</option>
+                  <option value="175">145</option>
+                  <option value="155">155</option>
+                  <option value="175">175</option>
+                  <option value="185">185</option>
+                  <option value="195">195</option>
+                  <option value="205">205</option>
+                  <option value="215">215</option>
+                  <option value="215">225</option>
+                  <option value="235">235</option>
+                  <option value="245">245</option>
+                  <option value="255">255</option>
+                  <option value="265">265</option>
                   <option value="275">275</option>
+                  <option value="285">285</option>
+                  <option value="305">305</option>
+                  <option value="315">315</option>
                 </select>
                 <select name="" id="">
-                  <option value="35">35</option>
+                  <option value="40">40</option>
+                  <option value="45">45</option>
+                  <option value="50">50</option>
+                  <option value="55">55</option>
+                  <option value="60">60</option>
+                  <option value="65">65</option>
+                  <option value="70">70</option>
+                  <option value="75">75</option>
+                  <option value="80">80</option>
+                  <option value="85">85</option>
+                  <option value="90">90</option>
                 </select>
                 <select name="" id="">
+                  <option value="R12">R12</option>
+                  <option value="R13">R13</option>
+                  <option value="R13C">R13C</option>
+                  <option value="R14">R14</option>
+                  <option value="R14C">R14C</option>
+                  <option value="R15">R15</option>
+                  <option value="R15C">R15C</option>
+                  <option value="R16">R16</option>
+                  <option value="R16C">R16C</option>
+                  <option value="R17">R17</option>
+                  <option value="R17C">R17C</option>
+                  <option value="R18">R18</option>
+                  <option value="R19">R19</option>
+                  <option value="R20">R20</option>
                   <option value="R21">R21</option>
+                  <option value="R22">R22</option>
+                  <option value="R23">R23</option>
                 </select>
                 <div class="cheack">
                   <div class="cheack__img">
@@ -444,13 +488,55 @@
                 </div>
                 <div class="select__wheels-behind">
                   <select name="" id="">
+                    <option value="7.5">7.5</option>
+                    <option value="175">145</option>
+                    <option value="155">155</option>
+                    <option value="175">175</option>
+                    <option value="185">185</option>
+                    <option value="195">195</option>
+                    <option value="205">205</option>
+                    <option value="215">215</option>
+                    <option value="215">225</option>
+                    <option value="235">235</option>
+                    <option value="245">245</option>
+                    <option value="255">255</option>
+                    <option value="265">265</option>
                     <option value="275">275</option>
+                    <option value="285">285</option>
+                    <option value="305">305</option>
+                    <option value="315">315</option>
                   </select>
                   <select name="" id="">
-                    <option value="35">35</option>
+                    <option value="40">40</option>
+                    <option value="45">45</option>
+                    <option value="50">50</option>
+                    <option value="55">55</option>
+                    <option value="60">60</option>
+                    <option value="65">65</option>
+                    <option value="70">70</option>
+                    <option value="75">75</option>
+                    <option value="80">80</option>
+                    <option value="85">85</option>
+                    <option value="90">90</option>
                   </select>
                   <select name="" id="">
+                    <option value="R12">R12</option>
+                    <option value="R13">R13</option>
+                    <option value="R13C">R13C</option>
+                    <option value="R14">R14</option>
+                    <option value="R14C">R14C</option>
+                    <option value="R15">R15</option>
+                    <option value="R15C">R15C</option>
+                    <option value="R16">R16</option>
+                    <option value="R16C">R16C</option>
+                    <option value="R17">R17</option>
+                    <option value="R17C">R17C</option>
+                    <option value="R18">R18</option>
+                    <option value="R19">R19</option>
+                    <option value="R20">R20</option>
                     <option value="R21">R21</option>
+                    <option value="R22">R22</option>
+                    <option value="R23">R23</option>
                   </select>
                 </div>
               </div>
@@ -631,14 +717,14 @@
           <input type="tel" placeholder="Телефон:" />
           <label>
             <p>Желаемая дата визита:</p>
-            <input type="datetime-local">
+            <input type="datetime-local" />
           </label>
           <button class="btn">Записаться</button>
         </form>
       </div>
     </div>
     <script
-      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDUBWoEYZEnJEXVem_iQ1CvvVWPi-fV0b4&callback=initMap&v=weekly"
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCbBma6BjwnAqHjfk1S6cGCrNp5OhManUQ&callback=initMap&v=weekly"
       async
     ></script>
     <script src="main.js"></script>
