--- a/index.html
+++ b/index.html
@@ -16,21 +16,29 @@
   <body>
     <header class="header">
       <div class="container">
-        <nav class="navbar">
-          <ul class="menu">
-            <li><a href="#top">Главная </a></li>
-            <li><a href="#service">Наши услуги</a></li>
-            <li><a href="#work">Как мы работаем </a></li>
-            <li><a href="#online">Онлайн запись</a></li>
-            <li><a href="#benefits">Преимущества</a></li>
-            <li><a href="#price">Цены</a></li>
-            <li><a href="#contact">Контакты</a></li>
+        <div class="header__logo"><img src="./img/logo.svg" alt="" /></div>
+        <div class="mobill__wrapper">
+          <nav class="navbar">
+            <ul class="menu">
+              <li><a href="#top">Главная </a></li>
+              <li><a href="#service">Наши услуги</a></li>
+              <li><a href="#work">Как мы работаем </a></li>
+              <li><a href="#online">Онлайн запись</a></li>
+              <li><a href="#benefits">Преимущества</a></li>
+              <li><a href="#price">Цены</a></li>
+              <li><a href="#contact">Контакты</a></li>
+            </ul>
+          </nav>
+          <ul class="mobil">
+            <li><a href="tel:+380931702919">+38 (093) 170 29 19</a></li>
+            <li><a href="tel:+380962024420">+38 (096) 202 44 20</a></li>
           </ul>
-        </nav>
-        <ul class="mobil">
-          <li><a href="tel:+380931702919">+38 (093) 170 29 19</a></li>
-          <li><a href="tel:+380962024420">+38 (096) 202 44 20</a></li>
-        </ul>
+        </div>
+        <div class="menu__burger">
+          <span></span>
+          <span></span>
+          <span></span>
+        </div>
       </div>
     </header>
     <main class="main">
@@ -430,9 +438,20 @@
               <div class="select__wheels">
                 <label>Размер шин</label>
                 <select name="" id="">
+                  <option value="5">5</option>
                   <option value="7.5">7.5</option>
+                  <option value="15.5">15.5</option>
+                  <option value="30">30</option>
+                  <option value="31">31</option>
+                  <option value="32">32</option>
+                  <option value="33">33</option>
+                  <option value="35">35</option>
+                  <option value="37">37</option>
+                  <option value="38">38</option>
+                  <option value="135">135</option>
                   <option value="175">145</option>
                   <option value="155">155</option>
+                  <option value="165">165</option>
                   <option value="175">175</option>
                   <option value="185">185</option>
                   <option value="195">195</option>
@@ -447,8 +466,19 @@
                   <option value="285">285</option>
                   <option value="305">305</option>
                   <option value="315">315</option>
+                  <option value="325">325</option>
+                  <option value="360">360</option>
                 </select>
                 <select name="" id="">
+                  <option value="8">8</option>
+                  <option value="9.5">9.5</option>
+                  <option value="10.5">10.5</option>
+                  <option value="11.5">11.5</option>
+                  <option value="12.5">12.5</option>
+                  <option value="13.5">13.5</option>
+                  <option value="25">25</option>
+                  <option value="30">30</option>
+                  <option value="35">35</option>
                   <option value="40">40</option>
                   <option value="45">45</option>
                   <option value="50">50</option>
@@ -462,6 +492,8 @@
                   <option value="90">90</option>
                 </select>
                 <select name="" id="">
+                  <option value="-15">-15</option>
+                  <option value="-16">-16</option>
                   <option value="R12">R12</option>
                   <option value="R13">R13</option>
                   <option value="R13C">R13C</option>
@@ -488,9 +520,20 @@
                 </div>
                 <div class="select__wheels-behind">
                   <select name="" id="">
+                    <option value="5">5</option>
                     <option value="7.5">7.5</option>
+                    <option value="15.5">15.5</option>
+                    <option value="30">30</option>
+                    <option value="31">31</option>
+                    <option value="32">32</option>
+                    <option value="33">33</option>
+                    <option value="35">35</option>
+                    <option value="37">37</option>
+                    <option value="38">38</option>
+                    <option value="135">135</option>
                     <option value="175">145</option>
                     <option value="155">155</option>
+                    <option value="165">165</option>
                     <option value="175">175</option>
                     <option value="185">185</option>
                     <option value="195">195</option>
@@ -505,8 +548,19 @@
                     <option value="285">285</option>
                     <option value="305">305</option>
                     <option value="315">315</option>
+                    <option value="325">325</option>
+                    <option value="360">360</option>
                   </select>
                   <select name="" id="">
+                    <option value="8">8</option>
+                    <option value="9.5">9.5</option>
+                    <option value="10.5">10.5</option>
+                    <option value="11.5">11.5</option>
+                    <option value="12.5">12.5</option>
+                    <option value="13.5">13.5</option>
+                    <option value="25">25</option>
+                    <option value="30">30</option>
+                    <option value="35">35</option>
                     <option value="40">40</option>
                     <option value="45">45</option>
                     <option value="50">50</option>
@@ -520,6 +574,8 @@
                     <option value="90">90</option>
                   </select>
                   <select name="" id="">
+                    <option value="-15">-15</option>
+                    <option value="-16">-16</option>
                     <option value="R12">R12</option>
                     <option value="R13">R13</option>
                     <option value="R13C">R13C</option>
